# llm-inference

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: models.yaml
config/profiles/: coding-fast.yaml  coding-quality.yaml
src/llm_inference/: __main__.py  cli.py
src/llm_inference/backends/: base.py  docker.py  llamacpp_backend.py  vllm_backend.py
src/llm_inference/config/: loader.py  schema.py
src/llm_inference/utils/: gpu.py
tests/: test_backends.py  test_config.py
